knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/Services__c.object-meta.xml
<CustomObject>
    <description>Place the date the opportunity is targeted to go before DAM for approval.</description>
    <label>Services</label>
    <nameField>
        <displayFormat>Services-{0000}</displayFormat>
        <label>Services ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>