knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Account_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Site_Address__c</fullName>
    <formula>Account__r.texcellency__DefHC_Address__c &amp;&quot; &quot; &amp; Account__r.texcellency__DefHC_Address1__c</formula>
    <label>Account (Site) Address</label>
    <type>Text</type>
</CustomField>