knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Annual_Encounters__c.field-meta.xml
<CustomField>
    <fullName>Annual_Encounters__c</fullName>
    <label>Annual Encounters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>