knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Coverage_Model_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Model_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of PR1050558-2143</description>
    <label>Coverage Model Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>