knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/CPM_Rate_Recommended__c.field-meta.xml
<CustomField>
    <fullName>CPM_Rate_Recommended__c</fullName>
    <description>Created as part of PR1050558-2143</description>
    <label>CPM Rate - Recommended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>