knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Cross_Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cross_Subsidy_Amount__c</fullName>
    <inlineHelpText>If the service is subsidizing existing business, place the value of the cross-subsidy here.  The &apos;Margin&apos; will subtract the &apos;Cross-Subsidy Amount&apos; to calculate the &apos;Incremental Margin&apos;.</inlineHelpText>
    <label>Cross-Subsidy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>