knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/EPC_of_Revenue__c.field-meta.xml
<CustomField>
    <fullName>EPC_of_Revenue__c</fullName>
    <label>EPC % of Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>