knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Field_Ops_Leadership_Rate_Approval__c.field-meta.xml
<CustomField>
    <fullName>Field_Ops_Leadership_Rate_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of PR1050558-2143</description>
    <label>Field Ops Leadership - Rate Approval</label>
    <type>Checkbox</type>
</CustomField>