knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Letter_of_Intent__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Intent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter of Intent</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>