knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/MD_DO_FTEs__c.field-meta.xml
<CustomField>
    <fullName>MD_DO_FTEs__c</fullName>
    <label>MD/DO FTEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>