knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/MD_DO_W2_Rates_Recommended__c.field-meta.xml
<CustomField>
    <fullName>MD_DO_W2_Rates_Recommended__c</fullName>
    <description>Created as part of PR1050558-2143</description>
    <label>MD/DO W2 Rates - Recommended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>