knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Medical_Director_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director_Stipend__c</fullName>
    <description>Created as part of PR1050558-2143</description>
    <label>Medical Director Stipend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>