knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Non_CORE_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Non_CORE_Next_Steps__c</fullName>
    <label>Non-CORE Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>