knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Non_CORE_Next_Steps_History__c.field-meta.xml
<CustomField>
    <fullName>Non_CORE_Next_Steps_History__c</fullName>
    <label>Non-CORE Next Steps History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>