knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/NP_PA_FTEs__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_FTEs__c</fullName>
    <label>NP/PA FTEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>