knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Proposed_Financial_Terms__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Financial_Terms__c</fullName>
    <label>Proposed Financial Terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Subsidy</fullName>
            </value>
            <value>
                <fullName>Management Fee</fullName>
            </value>
            <value>
                <fullName>Optimization Partnership/Flat Subsidy</fullName>
            </value>
            <value>
                <fullName>Performance Partnership</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>