knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Q1_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Q1_Revenue__c</fullName>
    <formula>if(year(Target_Contract_Start_Date__c)=year(Today()), 
  if(month(Target_Contract_Start_Date__c)&lt;4, ((90-dayofyear(Target_Contract_Start_Date__c))/90)*((Total_Revenue__c)/4), 0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>