knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Q2_Margin__c.field-meta.xml
<CustomField>
    <fullName>Q2_Margin__c</fullName>
    <formula>if(year(Target_Contract_Start_Date__c)=year(Today()),
  if(month(Target_Contract_Start_Date__c)&gt;3 &amp;&amp; month(Target_Contract_Start_Date__c)&lt;7, ((181-dayofyear(Target_Contract_Start_Date__c))/91)*((Incremental_Margin__c)/4), 
    if(month(Target_Contract_Start_Date__c)&lt;4,((Incremental_Margin__c)/4),0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>