knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Q3_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Q3_Revenue__c</fullName>
    <formula>if(year(Target_Contract_Start_Date__c)=year(Today()),
if(month(Target_Contract_Start_Date__c)&gt;6 &amp;&amp; month(Target_Contract_Start_Date__c)&lt;10, ((273-dayofyear(Target_Contract_Start_Date__c))/92)*((Total_Revenue__c)/4),
if(month(Target_Contract_Start_Date__c)&lt;7,((Total_Revenue__c)/4),0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>