knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Service_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Service Account Name</label>
    <type>Text</type>
</CustomField>