knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Service_Line_Coverage_Model__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Coverage_Model__c</fullName>
    <description>Created as part of PR1050558-2143</description>
    <label>Service Line Coverage Model</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>