knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Service_Line_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the incumbent for this individual service line.  Each service line record will need the incumbent listed.</inlineHelpText>
    <label>Service Line Incumbent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You may only select a competitor account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services (Service Line Incumbent)</relationshipLabel>
    <relationshipName>Services_of_Incumbent</relationshipName>
    <type>Lookup</type>
</CustomField>