knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Services_Power_of_1__c.field-meta.xml
<CustomField>
    <fullName>Services_Power_of_1__c</fullName>
    <description>Power of 1 Field</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to improve reporting</inlineHelpText>
    <label>Services - Power of 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>