knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Sign_On_Bonus_Retention_Bonuses__c.field-meta.xml
<CustomField>
    <fullName>Sign_On_Bonus_Retention_Bonuses__c</fullName>
    <description>Created as part of PR1050558-2143</description>
    <label>Sign-on bonus/Retention Bonuses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>