knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Target_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Contract_Start_Date__c</fullName>
    <label>Target Contract Start Date</label>
    <type>Date</type>
</CustomField>