knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>Account__r.Service_Line__r.Name</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>