knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Behavioral_Health.recordType-meta.xml
<RecordType>
    <fullName>Behavioral_Health</fullName>
    <active>true</active>
    <label>Behavioral Health</label>
</RecordType>