knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Connected_Care_Complete.recordType-meta.xml
<RecordType>
    <fullName>Connected_Care_Complete</fullName>
    <active>true</active>
    <label>Connected Care - Complete</label>
</RecordType>