knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Connected_Care_Next.recordType-meta.xml
<RecordType>
    <fullName>Connected_Care_Next</fullName>
    <active>true</active>
    <label>Connected Care - Next</label>
</RecordType>