knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Core_Place_Holder.recordType-meta.xml
<RecordType>
    <fullName>Core_Place_Holder</fullName>
    <active>false</active>
    <description>Use this option when we are not aware what specific service line they are choosing</description>
    <label>Core Place Holder</label>
</RecordType>