knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Emergency_Medicine_EM.recordType-meta.xml
<RecordType>
    <fullName>Emergency_Medicine_EM</fullName>
    <active>true</active>
    <label>Emergency Medicine (EM)</label>
</RecordType>