knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Free_Standing_ED_FSED.recordType-meta.xml
<RecordType>
    <fullName>Free_Standing_ED_FSED</fullName>
    <active>false</active>
    <label>Free Standing ED (FSED)</label>
</RecordType>