knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Hospital_Medicine_HM.recordType-meta.xml
<RecordType>
    <fullName>Hospital_Medicine_HM</fullName>
    <active>false</active>
    <label>Hospital Medicine (HM)</label>
</RecordType>