knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Hospital_Medicine_PDC.recordType-meta.xml
<RecordType>
    <fullName>Hospital_Medicine_PDC</fullName>
    <active>true</active>
    <label>Hospital Medicine Post Discharge Clinic</label>
</RecordType>