knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Innovation_Non_commercial.recordType-meta.xml
<RecordType>
    <fullName>Innovation_Non_commercial</fullName>
    <active>false</active>
    <label>Innovation / Non-commercial</label>
</RecordType>