knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Integrated_Care_Physician_ICP.recordType-meta.xml
<RecordType>
    <fullName>Integrated_Care_Physician_ICP</fullName>
    <active>false</active>
    <label>Integrated Care Physician (ICP)</label>
</RecordType>