knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Intensive_Care_Unit_ICU.recordType-meta.xml
<RecordType>
    <fullName>Intensive_Care_Unit_ICU</fullName>
    <active>false</active>
    <label>Intensive Care Unit (ICU)</label>
</RecordType>