knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Needs_Review.recordType-meta.xml
<RecordType>
    <fullName>Needs_Review</fullName>
    <active>false</active>
    <description>Temporary Record Type for Data Conversions</description>
    <label>Needs Review</label>
</RecordType>