knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Other_Service_Lines_NON_CORE.recordType-meta.xml
<RecordType>
    <fullName>Other_Service_Lines_NON_CORE</fullName>
    <active>false</active>
    <label>Other Service Lines (NON-CORE)</label>
</RecordType>