knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Urgent_Care_UC.recordType-meta.xml
<RecordType>
    <fullName>Urgent_Care_UC</fullName>
    <active>false</active>
    <label>Urgent Care (UC)</label>
</RecordType>