knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Value_Based_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Value_Based_Solutions</fullName>
    <active>false</active>
    <label>Value-Based Solutions</label>
</RecordType>