knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Services__c/recordTypes/Virtual_Hybrid_Care_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Virtual_Hybrid_Care_Solutions</fullName>
    <active>false</active>
    <label>Virtual &amp; Hybrid Care Solutions</label>
</RecordType>